--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     dplyr,
     tidyr,
     modeest,
-    pkgload
+    pkgload,
+    plotly
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
