--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(plot_kymograph_find_peaks)
 export(plot_scheme_find_peaks)
 export(run_app)
 export(wykres_str)
+import(ggpubr)
 import(shiny)
 importFrom(config,get)
 importFrom(golem,activate_js)
