added correlation and lm tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(dodaj_ind)
 export(find_peaks)
 export(plot_find_peaks)
 export(plot_kymograph_find_peaks)
+export(plot_peaks_ridges)
 export(plot_scheme_find_peaks)
 export(run_app)
 export(wykres_str)
