--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     Hmisc,
     EDA,
     tiff,
-    bioimagetools
+    bioimagetools,
+    EBImage
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
