Added coluorpicker for kymograph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(plot_peaks_ridges)
 export(plot_scheme_find_peaks)
 export(run_app)
 export(wykres_str)
+import(colourpicker)
 import(ggpubr)
 import(shiny)
 importFrom(config,get)
@@ -16,4 +17,6 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tagList)
