--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,11 +29,15 @@ Imports:
     tiff,
     bioimagetools,
     EBImage,
-    pixmap
+    pixmap,
+    colourpicker
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Depends: 
     R (>= 2.10)
+VignetteBuilder: knitr
