various bug and ui fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(run_app)
 export(wykres_str)
 import(colourpicker)
 import(ggpubr)
+import(rtiff)
 import(shiny)
 importFrom(config,get)
 importFrom(golem,activate_js)
@@ -17,6 +18,4 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
-importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
-importFrom(shiny,tagList)
