--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     bioimagetools,
     EBImage,
     pixmap,
-    colourpicker
+    colourpicker,
+    rtiff
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
