--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,11 +30,10 @@ Imports:
     bioimagetools,
     EBImage,
     pixmap,
-    colourpicker,
-    rtiff
+    colourpicker
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests: 
     testthat,
     knitr,
