--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,16 +24,10 @@ Imports:
     ggbeeswarm,
     shinythemes,
     magrittr,
-    Hmisc,
-    EDA,
-    tiff,
-    bioimagetools,
-    EBImage,
-    pixmap,
-    colourpicker
+    Hmisc
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.3
 Suggests: 
     testthat,
     knitr,
